Be a better fix for overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ ul {
   float: right;
   margin-left: auto;
   margin-right: auto;
-  overflow: scroll;
+  overflow: auto;
 }
 
 #endGame {
